--- a/einleitung.tex
+++ b/einleitung.tex
@@ -17,4 +17,4 @@ Hierzu werden zunächst im Kapitel~\myref{sec:grundlagen} die für diese Arbeit 
 
 Der Augenmerk dieser Arbeit liegt auf den behandelten Konzepten und Technologien der Informationstechnologie. Die Entsprechungen in der Ölindustrie werden nicht in der gleichen Tiefe erörtert und belegt werden, sondern beschränken sich auf generelle Aussagen und Ansichten.
 
-Die Themenbereiche \buzz{Internet of Things}, \buzz{Ubiquitous Computing} und \buzz{Life Tracking} werden in dieser Arbeit unter dem Kürzel \ac{IoT} zusammengefasst, auch wenn damit unterschiedliche Techniken und Anwendungsfälle beschrieben werden können. Ebenfalls werden diese Gebiete als stetig wachsende Datenquellen angesehen, ohne dass sie genauer untersucht werden\footnote{Siehe hierzu auch Abschnitt~\myref{ausblick}}.
+Die Themenbereiche \buzz{Internet of Things}, \buzz{Ubiquitous Computing} und \buzz{Life Tracking} werden in dieser Arbeit unter dem Begriff \buzz{Ubiquitous Computing}\footnote{ubiquitous: Englisch für „allgegenwärtig“} zusammengefasst, auch wenn damit unterschiedliche Techniken, Geräte und Anwendungsfälle beschrieben werden können. Ebenfalls werden diese Gebiete als stetig wachsende Datenquellen angesehen, ohne dass sie genauer untersucht werden\footnote{Siehe hierzu auch Abschnitt~\myref{ausblick}}.
