--- a/einstellungen.tex
+++ b/einstellungen.tex
@@ -30,7 +30,7 @@
 %% Tabellenverzeichnis
 %\listoftablestrue
 %% Abkürzungsverzeichnis
-\acronymtrue
+% \acronymtrue
 
 % Wittwen und Waisen verhindern
 \clubpenalty10000
