--- a/literatur.bib
+++ b/literatur.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-12 09:45:15 +0100 
+%% Created for Stefan Waidele at 2014-11-14 10:56:06 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{gartneriot,
+	Author = {{Gartner (Hrsg.)}},
+	Date-Added = {2014-11-14 09:53:13 +0000},
+	Date-Modified = {2014-11-14 09:55:57 +0000},
+	Howpublished = {\url{http://www.gartner.com/newsroom/id/2905717}, abgerufen am 14.11.2014},
+	Month = {11},
+	Title = {{Gartner Says 4.9 Billion Connected Things will be in Use in 2015}},
+	Year = {2014}}
 
 @mastersthesis{sprejz,
 	Author = {Mich{\`e}le Sprejz},
@@ -229,7 +238,7 @@
 	Date-Added = {2014-11-04 07:33:43 +0000},
 	Date-Modified = {2014-11-12 07:52:49 +0000},
 	Publisher = {IGI Global},
-	Title = {{Models for Capitalizing on Web Engineering Advancements} },
+	Title = {{Models for Capitalizing on Web Engineering Advancements}},
 	Year = {2012}}
 
 @article{taylor,
