--- a/vorlage.tex
+++ b/vorlage.tex
@@ -35,6 +35,9 @@
 \usepackage{fancyhdr}
 \usepackage{float} % Notwendig fuer figure[h]
 \usepackage[printonlyused]{acronym}
+\usepackage{makeidx}
+
+\makeindex
 
 \newif\iflistoffigures
 \newif\iflistoftables
@@ -58,7 +61,9 @@
 
 %% Definition for Codeschnipsel im Fließtext
 \newcommand{\code}{\texttt}
-\newcommand{\buzz}{\textit}
+% \newcommand{\buzz}{\textit}
+\newcommand{\buzz}[1]{\textit{#1}\index{#1}}
+
 \newcommand{\todo}[1]{\fbox{\parbox{\textwidth}{\textbf{To do:} #1}}}
 %\newcommand{\myref}[1]{„\ref{#1}~\nameref{#1}“}
 \newcommand{\myref}[1]{\textit{\ref{#1}~\nameref{#1}}}
@@ -151,6 +156,9 @@
 \bibliographystyle{alpha}
 \bibliography{literatur}
 \onehalfspacing
+\clearpage
+
+\printindex
 \clearpage
 
 \pagestyle{empty} 
