--- a/literatur.bib
+++ b/literatur.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-14 10:56:06 +0100 
+%% Created for Stefan Waidele at 2014-11-15 00:29:08 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,17 +12,17 @@
 @misc{gartneriot,
 	Author = {{Gartner (Hrsg.)}},
 	Date-Added = {2014-11-14 09:53:13 +0000},
-	Date-Modified = {2014-11-14 09:55:57 +0000},
+	Date-Modified = {2014-11-14 23:27:23 +0000},
 	Howpublished = {\url{http://www.gartner.com/newsroom/id/2905717}, abgerufen am 14.11.2014},
-	Month = {11},
+	Month = {November},
 	Title = {{Gartner Says 4.9 Billion Connected Things will be in Use in 2015}},
 	Year = {2014}}
 
 @mastersthesis{sprejz,
 	Author = {Mich{\`e}le Sprejz},
 	Date-Added = {2014-11-12 06:54:07 +0000},
-	Date-Modified = {2014-11-12 07:59:15 +0000},
-	Month = {12},
+	Date-Modified = {2014-11-14 23:28:22 +0000},
+	Month = {Dezember},
 	School = {TU Dresden},
 	Title = {{Extraktion und Klassifikation von bewerteten Produktfeatures auf Webseiten}},
 	Type = {{Diplomarbeit}},
@@ -31,18 +31,18 @@
 @misc{fns,
 	Author = {Marina K{\"o}hn},
 	Date-Added = {2014-11-11 22:10:30 +0000},
-	Date-Modified = {2014-11-12 07:54:24 +0000},
+	Date-Modified = {2014-11-14 23:27:10 +0000},
 	Howpublished = {\url{http://oekotop100.de/software/wp-content/uploads/2014/10/Einladung_Fachgespraech_Nachhaltige_Software_am_28-11-2014.pdf}, abgerufen am 11.11.2014},
-	Month = {11},
+	Month = {November},
 	Title = {{Einladung zum Fachgespr{\"a}ch Nachhaltige Software}},
 	Year = {2014}}
 
 @article{bd25,
 	Author = {Peter--Michael Ziegler},
 	Date-Added = {2014-11-11 21:50:41 +0000},
-	Date-Modified = {2014-11-12 07:25:59 +0000},
+	Date-Modified = {2014-11-14 23:24:05 +0000},
 	Journal = {{c't Magazin, Heft 24 vom 01.11.}},
-	Month = {11},
+	Month = {November},
 	Pages = {52},
 	Title = {{2,5 Milliarden Euro f{\"u}r die Big--Data--Forschung}},
 	Year = {2014}}
@@ -94,9 +94,9 @@
 @techreport{pressler,
 	Author = {Carola Pre{\ss}ler},
 	Date-Added = {2014-11-11 17:39:28 +0000},
-	Date-Modified = {2014-11-12 07:59:05 +0000},
+	Date-Modified = {2014-11-14 23:28:15 +0000},
 	Institution = {Philipps--Universit{\"a}t Marburg},
-	Month = {01},
+	Month = {Januar},
 	Title = {{Erd{\"o}l und Erd{\"o}lprodukte}},
 	Type = {{Protokoll zum Experimentalvortrag}},
 	Year = {2000}}
@@ -104,9 +104,9 @@
 @misc{okg:tierpark,
 	Author = {Google},
 	Date-Added = {2014-11-11 14:01:21 +0000},
-	Date-Modified = {2014-11-11 21:22:36 +0000},
+	Date-Modified = {2014-11-14 23:28:03 +0000},
 	Howpublished = {\url{http://www.youtube.com/watch?v=Hay3d5g4_fI}, abgerufen am 11.11.2014},
-	Month = {06},
+	Month = {Juni},
 	Title = {{TV--Werbespot: Google Bonobo}},
 	Year = {2014}}
 
@@ -129,9 +129,9 @@
 @misc{odnsbi,
 	Author = {Dan Hubbart},
 	Date-Added = {2014-11-08 06:32:26 +0000},
-	Date-Modified = {2014-11-12 07:57:41 +0000},
+	Date-Modified = {2014-11-14 23:27:56 +0000},
 	Howpublished = {\url{http://blog.opendns.com/2012/05/15/enough-about-big-data-lets-talk-big-information/}, abgerufen am 08.11.2014},
-	Month = {05},
+	Month = {Mai},
 	Publisher = {OpenDNS},
 	Title = {{Enough about Big Data. Let's talk Big Information}},
 	Year = {2012}}
@@ -147,27 +147,27 @@
 @misc{bigdikw,
 	Author = {Tom Graves},
 	Date-Added = {2014-11-07 23:51:13 +0000},
-	Date-Modified = {2014-11-12 07:53:14 +0000},
+	Date-Modified = {2014-11-14 23:24:22 +0000},
 	Howpublished = {\url{http://weblog.tetradian.com/2014/03/04/big-data-big-information-big-knowledge/}, abgerufen am 08.11.2014},
-	Month = {03},
+	Month = {{M{\"a}rz}},
 	Title = {{Big-data, Big-Information, Big-Knowledge}},
 	Year = {2014}}
 
 @misc{faz:inng,
 	Author = {Holger Schmidt},
 	Date-Added = {2014-11-07 23:48:10 +0000},
-	Date-Modified = {2014-11-12 07:53:54 +0000},
+	Date-Modified = {2014-11-14 23:27:00 +0000},
 	Howpublished = {\url{http://www.faz.net/aktuell/wirtschaft/netzwirtschaft/web-3-0-das-internet-der-naechsten-generation-1796817.html}, abgerufen am 08.11.2014},
-	Month = {05},
+	Month = {Mai},
 	Title = {{Das Internet der n{\"a}chsten Generation}},
 	Year = {2009}}
 
 @misc{w3cstack,
 	Author = {Steve Bratt},
 	Date-Added = {2014-11-07 23:27:01 +0000},
-	Date-Modified = {2014-11-12 07:59:44 +0000},
+	Date-Modified = {2014-11-14 23:28:41 +0000},
 	Howpublished = {\url{http://www.w3.org/2007/Talks/0130-sb-W3CTechSemWeb/#(24)}, abgerufen am 07.11.2014},
-	Month = {01},
+	Month = {Januar},
 	Title = {{Semantic Web: Linked Data on the Web}},
 	Year = {2007}}
 
@@ -183,9 +183,9 @@
 @book{web3pol,
 	Author = {Simon Pont},
 	Date-Added = {2014-11-05 18:48:56 +0000},
-	Date-Modified = {2014-11-12 08:04:13 +0000},
+	Date-Modified = {2014-11-14 23:28:56 +0000},
 	Edition = {Web},
-	Month = {11},
+	Month = {November},
 	Publisher = {Kogan Page, London},
 	Title = {{The Better Mousetrap}},
 	Year = {2012}}
@@ -193,9 +193,9 @@
 @book{web3market,
 	Author = {Michael Tasner},
 	Date-Added = {2014-11-05 18:39:00 +0000},
-	Date-Modified = {2014-11-12 08:02:46 +0000},
+	Date-Modified = {2014-11-14 23:28:49 +0000},
 	Edition = {Web},
-	Month = {07},
+	Month = {Juli},
 	Publisher = {FT Press, Upper Saddle River, NJ, USA},
 	Title = {{The Limiting Factors of Web 2.0 and How Web 3.0 Is Different}},
 	Year = {2010},
@@ -204,9 +204,9 @@
 @misc{tsp:tolksdorf,
 	Author = {Robert Tolksdorf},
 	Date-Added = {2014-11-05 18:26:33 +0000},
-	Date-Modified = {2014-11-12 07:52:27 +0000},
+	Date-Modified = {2014-11-14 23:28:35 +0000},
 	Howpublished = {\url{http://www.tagesspiegel.de/zeitung/web-3-0-die-dimension-der-zukunft/1028324.html}, abgerufen am 05.11.2014},
-	Month = {08},
+	Month = {August},
 	Rating = {5},
 	Title = {{Web 3.0 -- die Dimension der Zukunft}},
 	Year = {2007}}
@@ -214,10 +214,10 @@
 @misc{nyt:markoff,
 	Author = {John Markoff},
 	Date-Added = {2014-11-05 18:15:13 +0000},
-	Date-Modified = {2014-11-12 07:57:31 +0000},
+	Date-Modified = {2014-11-14 23:27:50 +0000},
 	Howpublished = {\url{http://www.nytimes.com/2006/11/12/business/12web.html?pagewanted=all}, abgerufen am 05.11.2014},
 	Journal = {The New York Times},
-	Month = {11},
+	Month = {November},
 	Rating = {5},
 	Title = {{Entrepreneurs See a Web Guided by Common Sense}},
 	Year = {2006}}
@@ -225,9 +225,9 @@
 @misc{wp:semantik,
 	Author = {Wikipedia},
 	Date-Added = {2014-11-05 17:28:56 +0000},
-	Date-Modified = {2014-11-12 07:25:20 +0000},
+	Date-Modified = {2014-11-14 23:29:02 +0000},
 	Howpublished = {\url{http://de.wikipedia.org/wiki/Semantik}, abgerufen am 05.11.2014},
-	Month = {07},
+	Month = {Juli},
 	Publisher = {Wikipedia},
 	Title = {Semantik},
 	Year = {2008},
