--- a/schluss.tex
+++ b/schluss.tex
@@ -2,17 +2,17 @@
 
 \subsection{Fazit}
 
-In der Analogie zu Erdöl lassen sich die \buzz{Daten} wie in der These beschrieben mit Rohöl vergleichen. Die Techniken rund um \buzz{Big Data} gemeinsam mit den datenbankbezogenen Schichten des \buzz{semantischen Webs} entsprechen somit den Ölspeichern, welche den Rohstoff bereit halten. Die Weiterverarbeitung erfolgt dann in den logischen Schichten des \buzz{Web 3.0}, welche somit am ehesten mit den Raffinerien vergleichbar sind, die aus den klebrigen schwarzen Rohöl der Daten die verschiedenen Informations-- und Wissensprodukte erzeugt. Ob diese dann mit Schnierstoffen, schwerem Schiffsdiesel, hocheffizientem Kerosin oder Kunststoffen vergleichbar sind hängt sowohl von den Ausgangsdaten, aber auch wie beim Öl von den Zielsetzungen und Anforderungen ab.
+In der Analogie zu Erdöl lassen sich die \buzz{Daten}\index{Daten} wie in der These beschrieben mit Rohöl vergleichen. Die Techniken rund um \buzz{Big Data}\index{Big Data} gemeinsam mit den datenbankbezogenen Schichten des \buzz{semantischen Webs}\index{Web!3.0} entsprechen somit den Ölspeichern, welche den Rohstoff bereit halten. Die Weiterverarbeitung erfolgt dann in den logischen Schichten des \buzz{Web 3.0}\index{Web!3.0}, welche somit am ehesten mit den Raffinerien vergleichbar sind, die aus den klebrigen schwarzen Rohöl der Daten die verschiedenen Informations-- und Wissensprodukte erzeugt. Ob diese dann mit Schnierstoffen, schwerem Schiffsdiesel, hocheffizientem Kerosin oder Kunststoffen vergleichbar sind hängt sowohl von den Ausgangsdaten, aber auch wie beim Öl von den Zielsetzungen und Anforderungen ab.
 
 Datenschutz ist in diesem Bild vergleichbar mit Umweltschutz, der auf allen Ebenen dafür kämpft, dass die negativen Auswirkungen der neuen Technologie gemindert bzw. eliminiert werden. Wo beim Öl Strände, Seevögel, die Atmosphäre und das Klima geschützt werden, sind es  im Umfeld der des semantischen Webs die Bürger--, Grund-- und Persönlichkeitsrechte, die vor übermäßigem und falschem Einsatz der Technologie geschützt werden sollen.
 
 \subsection{Ausblick}
 \label{ausblick}
 
-Nach dieser Einordnung des \buzz{Web 3.0} bietet sich für weitere Arbeiten die genauere Untersuchung der einzelnen Aspekte an, die hier zum großen Teil nur genannt werden konnten. Speziell die automatische Informationserkennung durch Mustererkennung in Texten, Grafiken und Videos und die daraus entstehenden Möglichkeiten sind eine nähere Betrachtung wert. 
+Nach dieser Einordnung des \buzz{Web 3.0}\index{Web!3.0} bietet sich für weitere Arbeiten die genauere Untersuchung der einzelnen Aspekte an, die hier zum großen Teil nur genannt werden konnten. Speziell die automatische Informationserkennung durch Mustererkennung in Texten, Grafiken und Videos und die daraus entstehenden Möglichkeiten sind eine nähere Betrachtung wert. 
 
 Ebenso die höheren Ebenen des Web 3.0 Stacks, in denen es ebenfalls darum geht, Zusammenhänge rechnergestützt zu erkennen. Durch die Automatisierung der Informationsgewinnung wird diese skalierbar, so wie es die Datenspeicherung heute schon ist. Dies wird die in dieser Arbeit beschriebenen Entwicklungen nochmals deutlich beschleunigen und in ihrer Tragweite vergrößern. 
 
-Aufgrund der immensen Datenmenge, die von Technologien rund um das \buzz{Internet of Things}, \buzz{Ubiquitous Computing} oder \buzz{Life Tracking} erfasst werden können bieten sich diese Themengebiete ebenfalls für genauere Studien mit dem Fokus auf der Datenqualität an.
+Aufgrund der immensen Datenmenge, die von Technologien rund um das \buzz{Internet of Things}, \buzz{Ubiquitous Computing}\index{Ubiquitous Computing} und \buzz{Life Tracking} erfasst werden können bieten sich diese Themengebiete ebenfalls für genauere Studien mit dem Fokus auf der Datenqualität an.
 
 Weiterhin empfiehlt sich auch eine gründliche Untersuchung der gesellschaftlichen und politischen Aspekte des Semantischen Webs.
