--- a/vorlage.tex
+++ b/vorlage.tex
@@ -62,7 +62,7 @@
 %% Definition for Codeschnipsel im Fließtext
 \newcommand{\code}{\texttt}
 % \newcommand{\buzz}{\textit}
-\newcommand{\buzz}[1]{\textit{#1}\index{#1}}
+\newcommand{\buzz}{\textit}
 
 \newcommand{\todo}[1]{\fbox{\parbox{\textwidth}{\textbf{To do:} #1}}}
 %\newcommand{\myref}[1]{„\ref{#1}~\nameref{#1}“}
@@ -158,6 +158,11 @@
 \onehalfspacing
 \clearpage
 
+\index{Datum|see{Daten}}
+\index{Bedeutungslehre|see{Semantik}}
+\index{Web!semantisch|see{Web 3.0}}
+\index{Internet of Things|see{Ubiquitous Computing}}
+\index{Life Tracking|see{Ubiquitous Computing}}
 \printindex
 \clearpage
 
