--- a/vorlage.tex
+++ b/vorlage.tex
@@ -36,6 +36,7 @@
 \usepackage{float} % Notwendig fuer figure[h]
 \usepackage[printonlyused]{acronym}
 \usepackage{makeidx}
+\usepackage[activate={true,nocompatibility},final,tracking=false,kerning=true,spacing=true,factor=1100,stretch=20,shrink=20]{microtype}
 
 \makeindex
 
