--- a/hauptteil.tex
+++ b/hauptteil.tex
@@ -1,7 +1,7 @@
 \section{Web 3.0 --- Das Semantische Web}
 \label{sec:hauptteil}
 
-\subsection{Auswirkungen des Semantischen Webs auf die Gesellschaft}
+\subsection{Auswirkungen auf die Gesellschaft}
 
 Schon heute drehen sich die meisten der regelmäßig ausgeführtem Aktivitäten im Internet um \buzz{Informationen}\index{Information} oder gar \buzz{Wissen}\index{Wissen}, nicht um \buzz{Daten}\index{Daten}. So sind 56\% der im Digitalindex 2014 befragten Deutschen überzeugt, im Internet die automatisch die aktuellsten Informationen zu finden, 60\% sucht benötigte Informationen zuerst im Netz\footnote{vgl. \cite{d21}, Seite 6}. Die Erwartungen bzgl. Aktualität und Informationsgehalt an das \buzz{World Wide Web}\index{Web!World Wide} sind also sehr hoch. 
 
@@ -14,17 +14,17 @@ Schon heute drehen sich die meisten der regelmäßig ausgeführtem Aktivitäten 
 \end{figure}
 \footnotetext{\cite{d21}, Seite 37}
 
-Unter den Top 10 der regelmäßig durchgeführten Tätigkeiten der Befragten im Web finden sich die informationsorientierten Tätigkeiten „nach Inhalten/Informationen suchen“ auf Platz eins, „über aktuelle Ereignisse des Wohnorts informieren“ auf Platz 6 und die Erfassung eigener Daten auf Platz 10\footnote{vgl. \cite{d21}, Seite 37}. Weitere Tätigkeiten wie „Soziale Netzwerke nutzen“ (Platz 7) bzw. „Online--Videos ansehen“ (Platz 3) sowie „Online--Shopping“ (Platz 2) nutzen Internetangebote, die per Design sehr gut mit Taxonomien, Meta--Daten und Verknüpfungen ausgestattet sind.
+Unter den Top 10 der regelmäßig durchgeführten Tätigkeiten der Befragten im Web finden sich die informationsorientierten Tätigkeiten „nach Inhalten/Informationen suchen“ auf Platz eins, „über aktuelle Ereignisse des Wohnorts informieren“ auf Platz 6 und die Erfassung eigener Daten auf dem 10. Platz\footnote{vgl. \cite{d21}, Seite 37}. Weitere Tätigkeiten wie „Soziale Netzwerke nutzen“ (Platz 7) bzw. „Online--Videos ansehen“ (Platz 3) sowie „Online--Shopping“ (Platz 2) nutzen Internetangebote, die per Design sehr gut mit Taxonomien, Meta--Daten und Verknüpfungen ausgestattet sind.
 
 In den TV--Werbespots von Google und Apple werden Verbraucher gezielt auf entsprechend formulierte Anfragemöglichkeiten hingewiesen\footnote{z.B. „Ok Google, zeig mir mal den schnellsten Weg in den Münchner Tierpark?“, \cite{okg:tierpark}}. Somit werden die Möglichkeiten wie Routenplanung, Musiktitelerkennung, Wettervorhersage und andere, die schon heute durch einzelne Anwendungen zur Verfügung gestellt werden in einer Oberfläche Gebündelt und in das Bewusstsein der Verbraucher gebracht.
 
 \label{probleme}
-Neben dem offensichtlichen Nutzen des \buzz{World Wide Webs}\index{Web!World Wide} bringt die Entwicklung des Webs auch negative Auswirkungen auf die Gesellschaft. 
-Dies äußert sich in der Besorgnis von 60\% der Nutzer über die im Internet möglicherweise verfügbaren persönlichen Daten\footnote{vgl. \cite{d21}, Seite 6}. Bei der Nutzung von Webdiensten der öffentlichen Verwaltung haben 65\% der Befragten Angst vor Datendiebstahl, und 73\% der Deutschen haben ein starkes Interesse daran, wie Behörden mit den Daten der Bürger umgeht\footnote{vgl. \cite{d21gov}, Seite 9 bzw. Seite 34}.  Sowohl fiktive\footnote{vgl. \cite{orwell}} also auch reale\footnote{vgl. \cite{wp:stasi}} Unrechtsstaaten basieren auf der intensiven Erfassung und Auswertung von personenbezogener Daten der Bürger, was entsprechende Befürchtungen nährt und erklärt.
+Neben dem offensichtlichen Nutzen des \buzz{World Wide Web}\index{Web!World Wide} bringt die Entwicklung des Webs auch negative Auswirkungen auf die Gesellschaft. 
+Dies äußert sich in der Besorgnis von 60\% der Nutzer über die im Internet möglicherweise verfügbaren persönlichen Daten\footnote{vgl. \cite{d21}, Seite 6}. Bei der Nutzung von Webdiensten der öffentlichen Verwaltung haben 65\% der Befragten Angst vor Datendiebstahl, und 73\% der Deutschen haben ein starkes Interesse daran, wie Behörden mit den Daten der Bürger umgeht\footnote{vgl. \cite{d21gov}, Seite 9 bzw. Seite 34}.  Sowohl fiktive\footnote{z.B. Ozeanien in \cite{orwell}} also auch reale\footnote{z.B. die DDR, vgl. \cite{wp:stasi}} Unrechtsstaaten basieren auf der intensiven Erfassung und Auswertung von personenbezogener Daten der Bürger, was entsprechende Befürchtungen nährt und erklärt.
 
 Man kann davon ausgehen, dass mit weiter wachsenden Datenmengen, aber auch durch entsprechenden Wachstum an generierten und erfassten Informationen und Wissen sowohl die positiven Erwartungen als auch die Befürchtungen und Ängste in der Bevölkerung zunehmen werden.
 
-\subsection{Auswirkungen des Semantischen Webs auf die Wirtschaft}
+\subsection{Auswirkungen auf die Wirtschaft}
 
 Schon heute haben Unternehmen erkannt, dass es nicht ausreicht, immer mehr Daten anzuhäufen. Der Schritt von \buzz{Big Data} zu \buzz{Big Information}\index{Big Information|textbf} bringt Benutzerfreundlichkeit und echten Mehrwert für Unternehmen\footnote{vgl. \cite{odnsbi}}. In großen Unternehmen wird unter den Schlagwort \buzz{Business Intelligence}\index{Business Intelligence} bzw. \buzz{Online Analytical Processing} mit unterschiedlichen Technologien aus den im \buzz{Data Warehouse}\index{Data Warehouse} gespeicherten Daten Informationen und informatives Wissen zu extrahieren, auf dem dann Entscheidungen und Handlungen basieren können. 
 
@@ -50,7 +50,7 @@ Eine weitere Gemeinsamkeit zeigt sich bei historischer Betrachtung: Sowohl Öl a
 \subsection{Einschätzungen von Analysten und der Politik}
 \label{politik}
 
-Gartner rechnet mit einem Anstieg der mit dem Internet verbundenen Geräte um das Fünffache auf von fast fünf auf über 25 Milliarden Geräten im Jahr 2020\footnote{vgl. \cite{gartneriot}, Tabelle 1}. Zusätzlich zu den alleine durch die Herstellung und Vertrieb dieser Geräte erzielten Wertschöpfung wird in 2020 die Inanspruchnahme von Dienstleistungen im Wert von 263 Milliarden Dollar erwartet\footnote{vgl. \cite{gartneriot}, Absatz 3}.
+Gartner rechnet mit einem Anstieg der mit dem Internet verbundenen Geräte um das Fünffache  von fast fünf auf über 25 Milliarden Geräten im Jahr 2020\footnote{vgl. \cite{gartneriot}, Tabelle 1}. Zusätzlich zu den durch Herstellung und Vertrieb dieser Geräte erzielten Wertschöpfung wird in 2020 die Inanspruchnahme von Dienstleistungen im Wert von 263 Milliarden Dollar erwartet\footnote{vgl. \cite{gartneriot}, Absatz 3}.
 
 Von Politikern auf verschiedenen Ebenen wird der Themenbereich \buzz{Big Data} als sehr wichtige Wachstumsfeld eingeschätzt. So erklärt z.B. die EU--Kommissarin für die Digitale Agenda Needie Kroes: „Daten sind Antrieb und Grundlage für die Wirtschaft der Zukunft. Organisationen jeder Art [...] benötigen Daten als Bausteine, um leitstungsfähiger zu werden.“\footnote{Zitiert nach \cite{bd25}} und rechnet mit 100.000 neuen Arbeitsplätzen in der Datenverarbeitungsbranche. Durch ein Förderprogramm in Höhe von 2,5 Milliarden Euro soll die soll die Entwicklung von Techniken und Diensten zur Verarbeitung großer Datenmengen durch Einsatz von künstlicher Intelligenz gefördert werden.\footnote{vgl. \cite{bd25}}
 
